<resources>
    <string name="google_maps_key">AIzaSyAoe3GjU5ksi0mBO9LS5lkYw0zZwMMvB_4</string>

    <string name="app_name">Family Map</string>
    <string name="login_id">Login</string>

    <string name="hostLabel">Server Host:</string>
    <string name="portLabel">Server Port:</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordLabel">Password:</string>
    <string name="firstNameLabel">First Name:</string>
    <string name="lastNameLabel">Last Name:</string>
    <string name="emailLabel">Email:</string>
    <string name="genderLabel">Gender:</string>
    <string name="maleLabel">Male</string>
    <string name="femaleLabel">Female</string>
    <string name="signInLabel">Sign In</string>
    <string name="registerLabel">Register</string>

    <string name="mapGreeting">Woohoo! This is the Family Map!!</string>
    <string name="mapDefault">Click on a marker.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_person">PersonActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="title_activity_event">EventActivity</string>

    <string name="person">PERSON</string>
    <string name="event_details">EVENT DETAILS</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="spouse_lines">Spouse Lines</string>
    <string name="show_spouse_lines">SHOW SPOUSE LINES</string>
    <string name="show_family_tree_lines">SHOW FAMILY TREE LINES</string>
    <string name="family_tree_lines">Family Tree Lines</string>
    <string name="show_life_story_lines">SHOW LIFE STORY LINES</string>
    <string name="life_story_lines">Life Story Lines</string>
    <string name="filter_events_based_on_gender">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_events">Female Events</string>
    <string name="male_events">Male Events</string>
    <string name="filter_by_mother_s_side_of_the_family">FILTER BY MOTHER\'S SIDE OF THE FAMILY</string>
    <string name="mother_s_side">Mother\'s Side</string>
    <string name="filter_by_father_s_side_of_the_family">FILTER BY FATHER\'S SIDE OF THE FAMILY</string>
    <string name="father_s_side">Father\'s Side</string>
    <string name="logout">Logout</string>
    <string name="press_me">Press Me!</string>
    <string name="search">Search</string>
</resources>